--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">xxx头条</string>
+    <string name="app_name">头条</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">主页</string>
+    <string name="video">视频</string>
+    <string name="concern">关注</string>
+    <string name="mine">我的</string>
 </resources>
