--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="video">视频</string>
     <string name="concern">关注</string>
     <string name="mine">我的</string>
+    <string name="feed_search_tip">搜索</string>
 </resources>
