完善新闻详情

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="concern">关注</string>
     <string name="mine">我的</string>
     <string name="feed_search_tip">搜索</string>
+    <string name="forum_introduce">评论</string>
 </resources>
