完善我的界面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="mine">我的</string>
     <string name="feed_search_tip">搜索</string>
     <string name="forum_introduce">评论</string>
+    <string name="mine_tab_followings_title">关注</string>
+    <string name="mine_tab_followers_title">粉丝</string>
+    <string name="mine_tab_visitors_title">7天访客</string>
 </resources>
