--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="mine_tab_followings_title">关注</string>
     <string name="mine_tab_followers_title">粉丝</string>
     <string name="mine_tab_visitors_title">7天访客</string>
+    <string name="save">收藏</string>
+    <string name="nightTheme">夜间</string>
+    <string name="setting">设置</string>
 </resources>
